[gd_scene load_steps=8 format=3 uid="uid://fmieafew1yqi"]

[ext_resource type="Script" uid="uid://caqjd16i2dp01" path="res://addons/icosa/search.gd" id="1_ot4t0"]
[ext_resource type="Texture2D" uid="uid://4ova4wsdy5x8" path="res://addons/icosa/icons/magnify.svg" id="2_ottfe"]
[ext_resource type="Texture2D" uid="uid://burqvekfq2l4j" path="res://addons/icosa/icons/arrow_up.svg" id="3_b5aqq"]
[ext_resource type="Texture2D" uid="uid://ccmeocu15nk48" path="res://addons/icosa/icons/plus.svg" id="3_bp884"]
[ext_resource type="Texture2D" uid="uid://c3fwlyhb8aouh" path="res://addons/icosa/icons/arrow_left.svg" id="4_d4enq"]
[ext_resource type="Texture2D" uid="uid://b64swhbw03k8b" path="res://addons/icosa/icons/arrow_right.svg" id="5_bivqy"]
[ext_resource type="Texture2D" uid="uid://4uo3pd7erdcj" path="res://addons/icosa/icons/arrow_down.svg" id="7_d4enq"]

[node name="Search" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ot4t0")
metadata/_tab_index = 0

[node name="Keywords" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
placeholder_text = "Search for assets..."
right_icon = ExtResource("2_ottfe")

[node name="Split" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Gallery" type="PanelContainer" parent="Split"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopArea" type="VBoxContainer" parent="Split/Gallery"]
layout_mode = 2

[node name="AuthorPage" type="VBoxContainer" parent="Split/Gallery/TopArea"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AuthorPageTitle" type="RichTextLabel" parent="Split/Gallery/TopArea/AuthorPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 44
text = "User"
fit_content = true
horizontal_alignment = 1

[node name="AuthorPageAssetsFound" type="RichTextLabel" parent="Split/Gallery/TopArea/AuthorPage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 21
text = "%d assets found."
fit_content = true
horizontal_alignment = 1

[node name="AuthorPageGoBack" type="Button" parent="Split/Gallery/TopArea/AuthorPage"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back To Search"
icon = ExtResource("3_b5aqq")

[node name="Navigation" type="VBoxContainer" parent="Split/Gallery/TopArea"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Split/Gallery/TopArea/Navigation"]
layout_mode = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 12

[node name="Pagination" type="HBoxContainer" parent="Split/Gallery/TopArea/Navigation/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="PagePrevious" type="Button" parent="Split/Gallery/TopArea/Navigation/MarginContainer/Pagination"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_d4enq")

[node name="Pages" type="HBoxContainer" parent="Split/Gallery/TopArea/Navigation/MarginContainer/Pagination"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="PageNext" type="Button" parent="Split/Gallery/TopArea/Navigation/MarginContainer/Pagination"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("5_bivqy")

[node name="Scroll" type="ScrollContainer" parent="Split/Gallery/TopArea"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Assets" type="FlowContainer" parent="Split/Gallery/TopArea/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Split/Gallery"]
layout_mode = 2
mouse_filter = 2

[node name="NoAssetsFound" type="Label" parent="Split/Gallery/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "No assets found! Try another search."

[node name="SearchOptions" type="MarginContainer" parent="Split"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Split/SearchOptions"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Title"]
layout_mode = 2
text = "Search Options"
horizontal_alignment = 1

[node name="Options" type="MarginContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options"]
layout_mode = 2

[node name="OptionsPanels" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="AssetPanel" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2/Title"]
layout_mode = 2
text = "Asset"
horizontal_alignment = 1

[node name="AuthorName" type="LineEdit" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Author name.."

[node name="DisplayName" type="LineEdit" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Asset Name.."

[node name="TagInput" type="HBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="Tag" type="LineEdit" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2/TagInput"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "add tag"

[node name="AddTag" type="Button" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2/TagInput"]
layout_mode = 2
icon = ExtResource("3_bp884")

[node name="Tags" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="FiltersPanel" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/Title"]
layout_mode = 2
text = "Filters"
horizontal_alignment = 1

[node name="Curated" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "curated"

[node name="PanelContainer" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Order by:"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OrderBy" type="OptionButton" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 19
popup/item_0/text = "Best"
popup/item_0/id = 0
popup/item_1/text = "Newest"
popup/item_1/id = 1
popup/item_2/text = "Oldest"
popup/item_2/id = 2
popup/item_3/text = "Create Time"
popup/item_3/icon = ExtResource("3_b5aqq")
popup/item_3/id = 3
popup/item_4/text = "Create Time"
popup/item_4/icon = ExtResource("7_d4enq")
popup/item_4/id = 4
popup/item_5/text = "Update Time"
popup/item_5/icon = ExtResource("3_b5aqq")
popup/item_5/id = 5
popup/item_6/text = "Update Time"
popup/item_6/icon = ExtResource("7_d4enq")
popup/item_6/id = 6
popup/item_7/text = "Triangle Count"
popup/item_7/icon = ExtResource("3_b5aqq")
popup/item_7/id = 7
popup/item_8/text = "Triangle Count"
popup/item_8/icon = ExtResource("7_d4enq")
popup/item_8/id = 8
popup/item_9/text = "Liked Time"
popup/item_9/icon = ExtResource("3_b5aqq")
popup/item_9/id = 9
popup/item_10/text = "Liked Time"
popup/item_10/icon = ExtResource("7_d4enq")
popup/item_10/id = 10
popup/item_11/text = "Likes"
popup/item_11/icon = ExtResource("3_b5aqq")
popup/item_11/id = 11
popup/item_12/text = "Likes"
popup/item_12/icon = ExtResource("7_d4enq")
popup/item_12/id = 12
popup/item_13/text = "Downloads"
popup/item_13/icon = ExtResource("3_b5aqq")
popup/item_13/id = 13
popup/item_14/text = "Downloads"
popup/item_14/icon = ExtResource("7_d4enq")
popup/item_14/id = 14
popup/item_15/text = "Display Name"
popup/item_15/icon = ExtResource("3_b5aqq")
popup/item_15/id = 15
popup/item_16/text = "Display Name"
popup/item_16/icon = ExtResource("7_d4enq")
popup/item_16/id = 16
popup/item_17/text = "Author Name"
popup/item_17/icon = ExtResource("3_b5aqq")
popup/item_17/id = 17
popup/item_18/text = "Author Name"
popup/item_18/icon = ExtResource("7_d4enq")
popup/item_18/id = 18

[node name="FormatsPanel" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3/Title"]
layout_mode = 2
text = "Formats"
horizontal_alignment = 1

[node name="GLTF" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "GLTF"

[node name="OBJ" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "OBJ"

[node name="FBX" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "FBX"

[node name="TILT" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "TILT"

[node name="LicensePanel" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3/Title"]
layout_mode = 2
text = "License"
horizontal_alignment = 1

[node name="REMIXABLE" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2
button_pressed = true
text = "Remixable"

[node name="CC0" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2
text = "CC0"

[node name="CCBY" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2
text = "CC BY"

[node name="ALL_CC" type="CheckBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3"]
layout_mode = 2
text = "ALL CC"

[node name="PageSize" type="SpinBox" parent="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels"]
unique_name_in_owner = true
layout_mode = 2
prefix = "show assets"

[connection signal="text_changed" from="Keywords" to="." method="_on_keywords_text_changed"]
[connection signal="text_submitted" from="Keywords" to="." method="_on_keywords_text_submitted"]
[connection signal="pressed" from="Split/Gallery/TopArea/AuthorPage/AuthorPageGoBack" to="." method="_on_author_page_go_back_pressed"]
[connection signal="pressed" from="Split/Gallery/TopArea/Navigation/MarginContainer/Pagination/PagePrevious" to="." method="_on_page_previous_pressed"]
[connection signal="pressed" from="Split/Gallery/TopArea/Navigation/MarginContainer/Pagination/PageNext" to="." method="_on_page_next_pressed"]
[connection signal="text_submitted" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2/AuthorName" to="." method="_on_author_name_text_submitted"]
[connection signal="text_submitted" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/AssetPanel/MarginContainer/VBoxContainer2/DisplayName" to="." method="_on_display_name_text_submitted"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/Curated" to="." method="_on_curated_toggled"]
[connection signal="item_selected" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FiltersPanel/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/OrderBy" to="." method="_on_order_by_item_selected"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3/GLTF" to="." method="_on_gltf_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3/OBJ" to="." method="_on_obj_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3/FBX" to="." method="_on_fbx_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/FormatsPanel/MarginContainer3/VBoxContainer3/TILT" to="." method="_on_tilt_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3/REMIXABLE" to="." method="_on_remixable_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3/CC0" to="." method="_on_cc_0_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3/CCBY" to="." method="_on_cc_by_toggled"]
[connection signal="toggled" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/LicensePanel/MarginContainer3/VBoxContainer3/ALL_CC" to="." method="_on_all_cc_toggled"]
[connection signal="value_changed" from="Split/SearchOptions/PanelContainer/VBoxContainer/Options/ScrollContainer/OptionsPanels/PageSize" to="." method="_on_page_size_value_changed"]
